2007-03-18  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): Include job-state
	attribute.
	(Connection_getJobs): Include job-preserved attribute.
	(Connection_getJobs): Include time-at-creation, time-at-processing
	and time-at-completed attributes.
	(Connection_getJobs): Include job-media-sheets and
	job-media-sheets-completed attributes.

2007-01-03  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.17.

2007-01-03  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (ppd_encoding_is_utf8): Handle there being no known
	encoding for the PPD file (bug #220136).

2006-12-15  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (PPD_localize): New method.

2006-12-07  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.16.

2006-12-07  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinters): Include
	printer-state-reasons attribute.

2006-11-30  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinters): Include
	printer-state-message attribute.
	(do_printer_request): Set printer-state-message if reason given.
	(Connection_methods): Updated help strings.
	(Connection_adminSetServerSettings): Fixed small memory leak.
	(Connection_init): More debug.
	(Connection_dealloc): Likewise.
	(do_printer_request): Likewise.
	(Connection_getDests): Likewise.
	(Connection_getPrinters): Likewise.
	(set_http_error): Likewise.
	(set_ipp_error): Likewise.
	(build_list_from_attribute_strings): Likewise.
	(Connection_getClasses): Likewise.
	(Connection_getPPDs): Likewise.
	(Connection_getDevices): Likewise.
	(Connection_getJobs): Likewise.
	(Connection_getFile): Likewise.
	(Connection_putFile): Likewise.

2006-11-29  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): Include job-priority
	attribute.

2006-11-10  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.15.

2006-11-10  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): New method.